Done.M3:Part2,_task1-3

--- a/templates/about.html
+++ b/templates/about.html
@@ -37,7 +37,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/items">Items</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
