--- a/templates/item_page.html
+++ b/templates/item_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/items">Items</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
@@ -59,15 +59,11 @@
     </header>
     <div class = "div_bloc">
         <p>Имя: <i><u>{{item.name}}</u></i></p>
-        {% if item.quantity == 0 %}
-            <p>Количество: <i><u>товар отсутствует</u></i></p>
-        {% else %}
-            <p>Бренд: <i><u>{{item.brand}}</u></i></p>
-            <p>Количество: <i><u>{{item.count}}</u></i></p>
-        {% endif %}
-       
+        <p>Бренд: <i><u>{{item.brand}}</u></i></p>
+        <p>Количество: <i><u>{{item.count | default:"товара нет на складе"}}</u></i></p>
+        <p>Описание: <i><u>{{item.description}}</u></i></p>
     </div>
-    <hr>
+    <br><hr>
     <a href="/items">&lt Назад к списку товаров &gt</a>
 </body>
 </html>
