--- a/templates/index.html
+++ b/templates/index.html
@@ -1,60 +1,26 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main page</title>
-    <style>		
-        .menu{
-            padding: 2px;
-            overflow: auto;
-        }
-        .menu li:nth-child(1){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-		.menu li:nth-child(2){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-		.menu li:nth-child(3){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-		.menu li:nth-child(4){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-	    .menu li{
-            float: left;
-            margin: 5px;
-            list-style: none;
-            text-transform: uppercase;
-	    }
-    </style>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul class="menu">
-                <li><a href="/">Home</a></li>
-                <li><a href="/items">Items</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-        </nav>
-    </header>
+{% extends "base.html" %} 
+
+{% load static %}
+
+{% block title %} Main page {% endblock %}
+
+{% block content %}
+    {{ block.super }}
+    <br>
+
+    <img width="50px" src="{% static "images/django.svg" %}" alt="my_image">
 
     <h1>Приветствую!</h1>
 
     <p>
         Меня зовут: <i>{{name}}</i><br>
-        Мой email: <i>{{email}}</i>
-    </p><br><br>
+        Мой email: <i>{{email}}</i><br>
+        {{ item.name }}
+    </p><br>
 
     <p>
         Это главная страница сайта.<br>
         <i>Сайт пока в разработке...</i>
     </p>
-</body>
-</html>
+{% endblock %}
 
