--- a/templates/item_page.html
+++ b/templates/item_page.html
@@ -1,69 +1,27 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Item page</title>
-    <style>		
-        .menu{
-            padding: 2px;
-            overflow: auto;
-        }
-        .menu li:nth-child(1){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-		.menu li:nth-child(2){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-		.menu li:nth-child(3){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-		.menu li:nth-child(4){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-	    .menu li{
-            float: left;
-            margin: 5px;
-            list-style: none;
-            text-transform: uppercase;
-	    }
+{% extends "base.html" %}
 
-        .div_bloc{
-            font-family:Impact,Arial, Verdana;
-            font-size: 18px;
-            border: 1px solid red;
-            border-radius: 20px;
-            background: #d9d9d9;
-            width: calc(30%);
-            min-width: 200px;
-            padding: 10px
-        }
-        u {
-            color: red
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul class="menu">
-                <li><a href="/">Home</a></li>
-                <li><a href="/items">Items</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-        </nav>
-    </header>
+{% block title %}Item page{% endblock %}
+
+{% block content %}
+    {{ block.super }}
+
     <div class = "div_bloc">
-        <p>Имя: <i><u>{{item.name}}</u></i></p>
-        <p>Бренд: <i><u>{{item.brand}}</u></i></p>
-        <p>Количество: <i><u>{{item.count | default:"товара нет на складе"}}</u></i></p>
-        <p>Описание: <i><u>{{item.description}}</u></i></p>
+        <div class="">
+            <p>Имя: <i><u>{{item.name}}</u></i></p>
+        </div>
+        <div class="">
+            <p>Бренд: <i><u>{{item.brand}}</u></i></p>
+        </div>
+        <div class="">
+            <p>Количество: <i><u>{{item.count | default:"товара нет на складе"}}</u></i></p>
+        </div>
+        <div class="">
+            <p>Описание: <i><u>{{item.description}}</u></i></p>
+        </div>
     </div>
     <br><hr>
-    <a href="/items">&lt Назад к списку товаров &gt</a>
-</body>
-</html>
+{% endblock  %}
+
+
+
+
