Done.M4:Part1,_task1-3

--- a/templates/items_list.html
+++ b/templates/items_list.html
@@ -1,98 +1,15 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Items list</title>
-    <style>		
-        .menu{
-            padding: 2px;
-            overflow: auto;
-        }
-        .menu li:nth-child(1){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-		.menu li:nth-child(2){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-		.menu li:nth-child(3){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-		.menu li:nth-child(4){
-            border-right: 1px solid;
-            padding-right: 10px;
-		}
-	    .menu li{
-            float: left;
-            margin: 5px;
-            list-style: none;
-            text-transform: uppercase;
-	    }
+{% extends "base.html" %}
 
+{% block title %}Items list{% endblock %}
 
-        * {
-            box-sizing: border-box;
-        }
-        .item {
-            /* float: left; */
-            width: 150pt;
-            height: 100%;
-            margin: 10px;
-            box-shadow: 1px 2px 4px rgba(0,0,0,0.1);
-            border-radius: 4px;
-            padding-top: 10px;
-            background: rgba(223, 241, 244, 0.625);
-        }
-        .item:hover {
-            background: rgba(207, 232, 237);
-            box-shadow: 4px 8px 16px rgba(71, 215, 240);
-        }
-        .item p {
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-        .item_name {
-            font-size: 1.5em;
-            text-align: center;
-        }
-        .item a {
-            text-decoration: none;
-            color: black;
-            text-align: justify;
-        }
-        .items {
-            width: 100%;
-            display: grid;
-            /* автоматически заполняем на всю ширину grid-контейнера */
-            grid-template-columns: repeat(auto-fill, 200px);
-            max-width: 1200px; /* ширина grid-контейнера */
-            justify-content: center;
-            justify-items: center; /* размещает карточку по центру */
-            column-gap: 30px; /* Отступ между колонками */
-            row-gap: 40px; /* отступ между рядами */
-            margin: 0 auto;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul class="menu">
-                <li><a href="/">Home</a></li>
-                <li><a href="/items">Items</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-        </nav>
-    </header>
+{% block content %}
+    {{ block.super }}
 
     <h1>Список всех товаров:</h1>
     <div class="items">
         {% for item in items %}
             <div class="item">
-                <a href = "/item/{{item.id}}">
+                <a href = "{%  url "item-detail" item.id %}">
                     <p class="item_name">{{item.name}}</p>
                     <p>Описание товара:</p>
                     <p>{{item.description}}</p>
@@ -100,5 +17,5 @@
             </div>
         {% endfor %}
     </div>
-</body>
-</html>
+    <br><hr>
+{% endblock  %}
